Refactored horizontal merging

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
   <!-- Begin page content -->
   <div class="container" style="padding-top: 30px;">
     <div id="table">
-      <div id="table"><table class="table">
-        <tbody>
-          <tr>
-            <td>1/1</td>
-            <td>1/2</td>
-            <td>1/3</td>
-            <td>1/4</td>
-          </tr>
-          <tr>
-            <td>2/1</td>
-            <td>2/2</td>
-            <td>2/3</td>
-            <td>2/4</td>
-          </tr>
-          <tr>
-            <td>3/1</td>
-            <td>3/2</td>
-            <td>3/3</td>
-            <td>3/4</td>
-          </tr>
-        </tbody>
-      </table></div>
+      <div id="table">
+        <table class="table">
+          <tbody>
+            <tr>
+              <th colspan="1" rowspan="1"><br></th>
+              <th colspan="2" rowspan="1"><br></th>
+            </tr>
+            <tr>
+              <td colspan="1" rowspan="1"><br></td>
+              <td colspan="2" rowspan="2">Insert row below this cell<br></td>
+            </tr>
+            <tr>
+              <td colspan="1" rowspan="1"><br></td>
+            </tr>
+            <tr>
+              <td colspan="1" rowspan="1"><br></td>
+              <td colspan="1" rowspan="1"><br></td>
+              <td colspan="1" rowspan="1"><br></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 
